nav bugs are fixed and now is ready to have new style

--- a/caobaresponsivenav.html
+++ b/caobaresponsivenav.html
@@ -12,21 +12,22 @@
 <header>
 	<nav class="nav">
 		<ul class="nav__ul">
-		<li class="nav__li"><i class="fa-sharp fa-solid fa-home"></i> <a href="#">Inicio.</a></li>
-    	<li class="nav__li"><i class="fa-sharp fa-solid fa-users"></i> <a href="#">Sobre Nosotros.</a></li>
+		<li class="nav__li"><i class="fa-sharp fa-solid fa-home"></i> <a href="#">Inicio.</li>
+    	<li class="nav__li"><i class="fa-sharp fa-solid fa-users"></i> <a href="#">Sobre Nosotros.</li>
 		<li class="nav__li"><i class="fa-sharp fa-solid fa-image"></i> <a heref="#">Galeria.</li>
-		<li class="nav__li"><i class="fa-sharp fa-solid fa-phone"></i> <a href="#">Contactanos.</a></li> 
+		<li class="nav__li"><i class="fa-sharp fa-solid fa-phone"></i> <a href="#">Contactanos.</li> 
 		</ul>
-		
+	</nav>	
+	<nav class="nav__responsive">
 		<ul class="nav__responsive-ul">
 			<div class="responsive__button-container">
 			<div class="responsive__button fas fa-bars"></div>
 			</div>
 			<div class="nav__li-container">
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-home"></i> <a href="#">Inicio.</a></li>
-    	<li class="responsive__li"><i class="fa-sharp fa-solid fa-users"></i> <a href="#">Sobre Nosotros</a></li>
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-image"></i> <a href="#"></a>Galeria</li>
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-phone"></i> <a href="#">Contactanos</a></li>
+		<li class="responsive__li"><i class="fa-sharp fa-solid fa-home"> </i><a  href="#">Inicio.</li>
+    	<li class="responsive__li"><i class="fa-sharp fa-solid fa-users"></i><a href="#">Sobre Nosotros</li>
+		<li class="responsive__li"><i class="fa-sharp fa-solid fa-image"></i><a href="#">Galeria</li>
+		<li class="responsive__li"><i class="fa-sharp fa-solid fa-phone"></i><a href="#">Contactanos</li>
 			</div>
 		</ul>
 	</nav>
