--- a/caobaresponsivenav.html
+++ b/caobaresponsivenav.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://kit.fontawesome.com/3426e33aea.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="caobaweb.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://kit.fontawesome.com/3426e33aea.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="caobaweb.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<title>menu-responsive</title>
+	<title>caoba-carpentry</title>
 </head>
 <body>
 <header>
 	<nav class="nav">
 		<ul class="nav__ul">
-		<li class="nav__li"><i class="fa-sharp fa-solid fa-home"></i> <a href="#">Inicio.</li>
-    	<li class="nav__li"><i class="fa-sharp fa-solid fa-users"></i> <a href="#">Sobre Nosotros.</li>
-		<li class="nav__li"><i class="fa-sharp fa-solid fa-image"></i> <a heref="#">Galeria.</li>
-		<li class="nav__li"><i class="fa-sharp fa-solid fa-phone"></i> <a href="#">Contactanos.</li> 
+			<li class="nav__li"><i class="fas fa-home"></i><a href="#">Inicio</a></li>
+			<li class="nav__li"><i class="fas fa-users"></i><a href="#">Sobre Nosotros</a></li>
+			<li class="nav__li"><i class="fas fa-image"></i><a href="#">Galeria</a></li>
+			<li class="nav__li"><i class="fas fa-phone"></i><a href="#">Contactanos</a></li>			
 		</ul>
-	</nav>	
-	<nav class="nav__responsive">
 		<ul class="nav__responsive-ul">
-			<div class="responsive__button-container">
-			<div class="responsive__button fas fa-bars"></div>
-			</div>
+			<div class="nav__responsive-button fas fa-bars"></div>
 			<div class="nav__li-container">
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-home"> </i><a  href="#">Inicio.</li>
-    	<li class="responsive__li"><i class="fa-sharp fa-solid fa-users"></i><a href="#">Sobre Nosotros</li>
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-image"></i><a href="#">Galeria</li>
-		<li class="responsive__li"><i class="fa-sharp fa-solid fa-phone"></i><a href="#">Contactanos</li>
-			</div>
+			<li class="nav__responsive-li"><i class="fas fa-home"></i><a href="#">Inicio</a></li>
+			<li class="nav__responsive-li"><i class="fas fa-users"></i><a href="#">Sobre Nosotros</a></li>
+			<li class="nav__responsive-li"><i class="fas fa-image"></i><a href="#">Galeria</a></li>
+			<li class="nav__responsive-li"><i class="fas fa-phone"></i><a href="#">Contactanos</a></li>
+			</div>			
 		</ul>
 	</nav>
 </header>
